# client/openapi.json
@@ -5,18 +5,18 @@
     "version": "0.1.0"
   },
   "paths": {
-    "/admin/books/upload": {
+    "/books/upload": {
       "post": {
         "tags": [
-          "admin"
+          "books"
         ],
         "summary": "Upload Book",
-        "operationId": "upload_book_admin_books_upload_post",
+        "operationId": "upload_book_books_upload_post",
         "requestBody": {
           "content": {
             "multipart/form-data": {
               "schema": {
-                "$ref": "#/components/schemas/Body_upload_book_admin_books_upload_post"
+                "$ref": "#/components/schemas/Body_upload_book_books_upload_post"
               }
             }
           },
@@ -86,7 +86,7 @@
   },
   "components": {
     "schemas": {
-      "Body_upload_book_admin_books_upload_post": {
+      "Body_upload_book_books_upload_post": {
         "properties": {
           "file": {
             "type": "string",
@@ -103,7 +103,7 @@
           "file",
           "household_id"
         ],
-        "title": "Body_upload_book_admin_books_upload_post"
+        "title": "Body_upload_book_books_upload_post"
       },
       "HTTPValidationError": {
         "properties": {
